# doi

./: deploy-doi.sh
rafts/api/validator/: Dockerfile  pyproject.toml
rafts/api/validator/app/: __init__.py  config.py  main.py
rafts/api/validator/app/routes/: health.py  model_context.py  mpc_validation.py  psv_validation.py  xml_validation.py
rafts/api/validator/app/utils/: conversion.py  paths.py  validation.py
rafts/api/validator/tests/: conftest.py  test_health.py  test_model_context.py  test_mpc_validation.py  test_psv_validation.py  test_xml_security.py  test_xml_validation.py
rafts/frontend/: next.config.ts  package-lock.json  package.json
rafts/frontend/src/: middleware.ts  types.d.ts  version.json
rafts/frontend/src/__tests__/: setup.ts
rafts/frontend/src/actions/: adesValidation.ts  adesValidation.types.ts  assignReviewer.ts  attachments.ts  auth.ts  constants.ts  createDOIForDraft.ts  deleteRaft.ts  getDOI.ts  getDOIRAFT.ts  getDOIsForReview.ts  getInternalRaftById.ts  getPublishedRaftById.ts  getRaftById.ts  getRaftReview.ts  getRafts.ts  getReviewReadyRafts.ts  getUserRafts.ts  publishRaftDoi.ts  submitDOI.ts  submitForReview.ts  submitRaft.ts  submitReviewComment.ts  types.ts  updateDOI.ts  updateDOIStatus.ts  updateDOIXml.ts  updateRaft.ts  updateRaftStatus.ts
rafts/frontend/src/app/: layout.tsx  page.tsx
rafts/frontend/src/auth/: constants.ts  credentials.ts  types.ts
rafts/frontend/src/components/: HomeClient.tsx  VersionInfo.tsx
rafts/frontend/src/config/: environment.ts
rafts/frontend/src/context/: RaftFormContext.tsx  types.ts  (+2 more)
(+179 files in other folders)
